Level-6 google login using passport

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-SECRET = Iamashishmishraiamanninjacoder.
+CLIENT_ID=728509209101-3ehcmnrrir970bt4j83c7sbfe4mb65na.apps.googleusercontent.com
+CLIENT_SECRET=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
